--- a/WPNest/WPNest/Login/LoginControl.xaml
+++ b/WPNest/WPNest/Login/LoginControl.xaml
@@ -3,14 +3,22 @@
 			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
 			 xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
 			 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-			 xmlns:WPNest="clr-namespace:WPNest" xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit" x:Class="WPNest.Login.LoginControl" 
+			 xmlns:WPNest="clr-namespace:WPNest" xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit" xmlns:local="clr-namespace:WPNest.Login" x:Class="WPNest.Login.LoginControl" 
 			 mc:Ignorable="d" 
-			 FontFamily="{StaticResource PhoneFontFamilyNormal}" 
-			 FontSize="{StaticResource PhoneFontSizeNormal}" 
-			 Foreground="{StaticResource PhoneForegroundBrush}" 
 			 d:DesignHeight="800" d:DesignWidth="480">
 	<UserControl.Resources>
+		<local:LoginMessageConverter x:Key="LoginMessageConverter"/>
 	</UserControl.Resources>
+
+	<UserControl.FontFamily>
+		<StaticResource ResourceKey="PhoneFontFamilyNormal"/>
+	</UserControl.FontFamily>
+	<UserControl.FontSize>
+		<StaticResource ResourceKey="PhoneFontSizeNormal"/>
+	</UserControl.FontSize>
+	<UserControl.Foreground>
+		<StaticResource ResourceKey="PhoneForegroundBrush"/>
+	</UserControl.Foreground>
 
 	<d:DataContext>
 		<WPNest:NestViewModel />
@@ -29,14 +37,17 @@
 				<RowDefinition Height="Auto" />
 				<RowDefinition Height="Auto" />
 				<RowDefinition Height="Auto" />
+				<RowDefinition Height="65"/>
 				<RowDefinition Height="Auto"/>
 				<RowDefinition/>
 			</Grid.RowDefinitions>
-			<TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="Log in to your Nest account" VerticalAlignment="Top" Foreground="{StaticResource logoBrush}" Margin="12,0,0,8" FontSize="24"/>
+
+			<TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" Text="Log in to your Nest account" VerticalAlignment="Top" Foreground="{StaticResource logoBrush}" Margin="87,0,75,0" FontSize="24"/>
 			<toolkit:PhoneTextBox x:Name="username" Grid.Row="1" Text="{Binding UserName, Mode=TwoWay}" Hint="Email address" InputScope="EmailUserName" />
 			<PasswordBox x:Name="password" Grid.Row="2" Password="{Binding Password, Mode=TwoWay}" GotFocus="OnPasswordChangedFocus" LostFocus="OnPasswordChangedFocus" Style="{StaticResource PasswordBoxStyle}" />
 			<TextBlock x:Name="passwordHint" TextWrapping="Wrap" Text="Password" IsHitTestVisible="False" Grid.Row="2" Padding="17,0,0,0" VerticalAlignment="Center" FontSize="24" Foreground="#FF919191" Margin="0,20"/>
-			<Button Click="OnLoginPressed" Grid.Row="3" Foreground="#FF474747" BorderBrush="#FF515151" Content="Log In" Margin="0,30,0,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="250" Background="#4CF6FBFF"/>
+			<TextBlock x:Name="errorMessage" TextWrapping="Wrap" Grid.Row="3" Foreground="#DEF00000" TextAlignment="Center" Text="{Binding CurrentError, Converter={StaticResource LoginMessageConverter}}" Margin="12,0"/>
+			<Button Click="OnLoginPressed" Grid.Row="4" Foreground="#FF474747" BorderBrush="#FF515151" Content="Log In" Margin="0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="250" Background="#4CF6FBFF"/>
 		</Grid>
 
 	</Grid>
