--- a/WPNest/WPNest/ThermostatControl.xaml
+++ b/WPNest/WPNest/ThermostatControl.xaml
@@ -2,14 +2,15 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:WPNest="clr-namespace:WPNest" mc:Ignorable="d"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+	xmlns:WPNest="clr-namespace:WPNest" mc:Ignorable="d"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
     d:DesignHeight="380" d:DesignWidth="380"
 	Loaded="OnLoaded" SizeChanged="OnSizeChanged" >
 	<d:DataContext>
-		<WPNest:NestViewModel/>
+		<WPNest:NestSampleViewModel/>
 	</d:DataContext>
 	<UserControl.Resources>
 		<Style x:Key="UpButton" TargetType="Button">
