--- a/WPNest/WPNest/MainPage.xaml
+++ b/WPNest/WPNest/MainPage.xaml
@@ -70,24 +70,6 @@
 				</EasingDoubleKeyFrame>
 			</DoubleAnimationUsingKeyFrames>
 		</Storyboard>
-		<Storyboard x:Name="Storyboard1">
-			<DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleX)" Storyboard.TargetName="thermostatControl">
-				<EasingDoubleKeyFrame KeyTime="0" Value="1"/>
-				<EasingDoubleKeyFrame KeyTime="0:0:1" Value="60">
-					<EasingDoubleKeyFrame.EasingFunction>
-						<QuadraticEase EasingMode="EaseInOut"/>
-					</EasingDoubleKeyFrame.EasingFunction>
-				</EasingDoubleKeyFrame>
-			</DoubleAnimationUsingKeyFrames>
-			<DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleY)" Storyboard.TargetName="thermostatControl">
-				<EasingDoubleKeyFrame KeyTime="0" Value="1"/>
-				<EasingDoubleKeyFrame KeyTime="0:0:1" Value="60">
-					<EasingDoubleKeyFrame.EasingFunction>
-						<QuadraticEase EasingMode="EaseInOut"/>
-					</EasingDoubleKeyFrame.EasingFunction>
-				</EasingDoubleKeyFrame>
-			</DoubleAnimationUsingKeyFrames>
-		</Storyboard>
 		<Style x:Key="SettingsButton" TargetType="Button">
 			<Setter Property="Background" Value="Transparent"/>
 			<Setter Property="BorderBrush" Value="{StaticResource PhoneForegroundBrush}"/>
@@ -339,6 +321,65 @@
 				</Setter.Value>
 			</Setter>
 		</Style>
+		<SolidColorBrush x:Key="CoolDotBrush" Color="#FF7A8BB9"/>
+		<SolidColorBrush x:Key="DisabledDotBrush" Color="#FFA6A6A6"/>
+		<SolidColorBrush x:Key="HeatDotBrush" Color="#FFB44040"/>
+		<Storyboard x:Name="MoveThermostatToBackground">
+			<DoubleAnimation Duration="0:0:0.6" To="-150" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateY)" Storyboard.TargetName="thermostatControl" d:IsOptimized="True">
+				<DoubleAnimation.EasingFunction>
+					<BackEase EasingMode="EaseOut"/>
+				</DoubleAnimation.EasingFunction>
+			</DoubleAnimation>
+			<DoubleAnimation Duration="0:0:0.6" To="0.5" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleX)" Storyboard.TargetName="thermostatControl" d:IsOptimized="True">
+				<DoubleAnimation.EasingFunction>
+					<QuadraticEase EasingMode="EaseOut"/>
+				</DoubleAnimation.EasingFunction>
+			</DoubleAnimation>
+			<DoubleAnimation Duration="0:0:0.6" To="0.5" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleY)" Storyboard.TargetName="thermostatControl" d:IsOptimized="True">
+				<DoubleAnimation.EasingFunction>
+					<QuadraticEase EasingMode="EaseOut"/>
+				</DoubleAnimation.EasingFunction>
+			</DoubleAnimation>
+			<DoubleAnimation Duration="0:0:0.6" To="0.7" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="thermostatControl" d:IsOptimized="True">
+				<DoubleAnimation.EasingFunction>
+					<QuadraticEase EasingMode="EaseOut"/>
+				</DoubleAnimation.EasingFunction>
+			</DoubleAnimation>
+		</Storyboard>
+		<Storyboard x:Name="MoveThermostatToForeground">
+			<DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateY)" Storyboard.TargetName="thermostatControl">
+				<SplineDoubleKeyFrame KeyTime="0" Value="-150"/>
+				<EasingDoubleKeyFrame KeyTime="0:0:0.5" Value="1.7881393432617188E-05">
+					<EasingDoubleKeyFrame.EasingFunction>
+						<BackEase EasingMode="EaseIn"/>
+					</EasingDoubleKeyFrame.EasingFunction>
+				</EasingDoubleKeyFrame>
+			</DoubleAnimationUsingKeyFrames>
+			<DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleX)" Storyboard.TargetName="thermostatControl">
+				<SplineDoubleKeyFrame KeyTime="0" Value="0.5"/>
+				<EasingDoubleKeyFrame KeyTime="0:0:0.5" Value="1">
+					<EasingDoubleKeyFrame.EasingFunction>
+						<QuadraticEase EasingMode="EaseIn"/>
+					</EasingDoubleKeyFrame.EasingFunction>
+				</EasingDoubleKeyFrame>
+			</DoubleAnimationUsingKeyFrames>
+			<DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleY)" Storyboard.TargetName="thermostatControl">
+				<SplineDoubleKeyFrame KeyTime="0" Value="0.5"/>
+				<EasingDoubleKeyFrame KeyTime="0:0:0.5" Value="1">
+					<EasingDoubleKeyFrame.EasingFunction>
+						<QuadraticEase EasingMode="EaseIn"/>
+					</EasingDoubleKeyFrame.EasingFunction>
+				</EasingDoubleKeyFrame>
+			</DoubleAnimationUsingKeyFrames>
+			<DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="thermostatControl">
+				<SplineDoubleKeyFrame KeyTime="0" Value="0.7"/>
+				<EasingDoubleKeyFrame KeyTime="0:0:0.5" Value="1">
+					<EasingDoubleKeyFrame.EasingFunction>
+						<QuadraticEase EasingMode="EaseIn"/>
+					</EasingDoubleKeyFrame.EasingFunction>
+				</EasingDoubleKeyFrame>
+			</DoubleAnimationUsingKeyFrames>
+		</Storyboard>
 	</phone:PhoneApplicationPage.Resources>
 
 	<phone:PhoneApplicationPage.FontFamily>
@@ -475,10 +516,6 @@
 							</DiscreteObjectKeyFrame>
 						</ObjectAnimationUsingKeyFrames>
 						<DoubleAnimation Duration="0" To="-1" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateY)" Storyboard.TargetName="settingsButton" d:IsOptimized="True"/>
-						<DoubleAnimation Duration="0" To="-1" Storyboard.TargetProperty="(UIElement.Projection).(PlaneProjection.RotationY)" Storyboard.TargetName="thermostatControl" d:IsOptimized="True"/>
-						<DoubleAnimation Duration="0" To="-139" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateY)" Storyboard.TargetName="thermostatControl" d:IsOptimized="True"/>
-						<DoubleAnimation Duration="0" To="0.4" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleX)" Storyboard.TargetName="thermostatControl" d:IsOptimized="True"/>
-						<DoubleAnimation Duration="0" To="0.4" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleY)" Storyboard.TargetName="thermostatControl" d:IsOptimized="True"/>
 						<DoubleAnimation Duration="0" To="1" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="settingsGrid" d:IsOptimized="True"/>
 						<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.IsHitTestVisible)" Storyboard.TargetName="settingsGrid">
 							<DiscreteObjectKeyFrame KeyTime="0">
@@ -500,9 +537,6 @@
 				<VisualState x:Name="SettingsClosed">
 					<Storyboard>
 						<DoubleAnimation Duration="0" To="336" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateY)" Storyboard.TargetName="settingsGrid" d:IsOptimized="True"/>
-						<DoubleAnimation Duration="0" To="0" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.TranslateY)" Storyboard.TargetName="thermostatControl" d:IsOptimized="True"/>
-						<DoubleAnimation Duration="0" To="1" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleX)" Storyboard.TargetName="thermostatControl" d:IsOptimized="True"/>
-						<DoubleAnimation Duration="0" To="1" Storyboard.TargetProperty="(UIElement.RenderTransform).(CompositeTransform.ScaleY)" Storyboard.TargetName="thermostatControl" d:IsOptimized="True"/>
 					</Storyboard>
 				</VisualState>
 			</VisualStateGroup>
@@ -521,7 +555,7 @@
 			<toolkit:PerformanceProgressBar IsIndeterminate="True"/>
 		</StackPanel>
 
-		<WPNest:ThermostatControl x:Name="thermostatControl" Margin="50,194,50,176" IsHitTestVisible="False" RenderTransformOrigin="0.5,0.5" Grid.Row="1" d:IsHidden="True">
+		<WPNest:ThermostatControl x:Name="thermostatControl" Margin="50,194,50,176" IsHitTestVisible="False" RenderTransformOrigin="0.5,0.5" Grid.Row="1">
 			<WPNest:ThermostatControl.Projection>
 				<PlaneProjection CenterOfRotationY="7"/>
 			</WPNest:ThermostatControl.Projection>
@@ -538,7 +572,7 @@
 				<CompositeTransform/>
 			</Button.RenderTransform>
 		</Button>
-		<Rectangle x:Name="settingsInputBlocker" Grid.RowSpan="2" Fill="#01FFFFFF" StrokeThickness="0" IsHitTestVisible="False" MouseLeftButtonDown="settingsInputBlocker_MouseLeftButtonDown" Opacity="0"/>
+		<Rectangle x:Name="settingsInputBlocker" Grid.RowSpan="2" Fill="#01FFFFFF" StrokeThickness="0" IsHitTestVisible="False" MouseLeftButtonDown="OnClickedOutsideOfSettings" Opacity="0"/>
 		<Grid x:Name="settingsGrid" VerticalAlignment="Bottom" RenderTransformOrigin="0.5,0.5" Grid.Row="1" Background="#FF1F1F1F">
 			<Grid.RenderTransform>
 				<CompositeTransform TranslateY="336"/>
@@ -557,22 +591,22 @@
 			<toolkit:ListPicker Margin="30,0,30,30" VerticalAlignment="Bottom" Grid.Row="3" Background="#BFFFFFFF" BorderBrush="#BFFFFFFF" Foreground="Black" Template="{StaticResource ListPickerControlDarkTemplate}">
 				<toolkit:ListPickerItem HorizontalAlignment="Left" Width="414">
 					<StackPanel HorizontalAlignment="Left" Orientation="Horizontal">
-						<Ellipse Fill="#FFB44040" StrokeThickness="0" Width="25" Height="25" Margin="5,0"/>
-						<Ellipse Fill="#FFA6A6A6" StrokeThickness="0" Width="25" Height="25" Margin="5,0"/>
+						<Ellipse Fill="{StaticResource HeatDotBrush}" StrokeThickness="0" Width="25" Height="25" Margin="5,0"/>
+						<Ellipse Fill="{StaticResource DisabledDotBrush}" StrokeThickness="0" Width="25" Height="25" Margin="5,0"/>
 						<TextBlock TextWrapping="Wrap" Text="HEAT ONLY" Margin="10,0,0,0"/>
 					</StackPanel>
 				</toolkit:ListPickerItem>
 				<toolkit:ListPickerItem HorizontalAlignment="Left" Width="414">
 					<StackPanel HorizontalAlignment="Left" Orientation="Horizontal">
-						<Ellipse Fill="#FFA6A6A6" StrokeThickness="0" Width="25" Height="25" Margin="5,0"/>
-						<Ellipse Fill="#FF3D32AC" StrokeThickness="0" Width="25" Height="25" Margin="5,0"/>
+						<Ellipse Fill="{StaticResource DisabledDotBrush}" StrokeThickness="0" Width="25" Height="25" Margin="5,0"/>
+						<Ellipse Fill="{StaticResource CoolDotBrush}" StrokeThickness="0" Width="25" Height="25" Margin="5,0"/>
 						<TextBlock TextWrapping="Wrap" Text="COOL ONLY" Margin="10,0,0,0"/>
 					</StackPanel>
 				</toolkit:ListPickerItem>
 				<toolkit:ListPickerItem HorizontalAlignment="Left" Width="414">
 					<StackPanel HorizontalAlignment="Left" Orientation="Horizontal">
-						<Ellipse Fill="#FFB44040" StrokeThickness="0" Width="25" Height="25" Margin="5,0"/>
-						<Ellipse Fill="#FF3D32AC" StrokeThickness="0" Width="25" Height="25" Margin="5,0"/>
+						<Ellipse Fill="{StaticResource HeatDotBrush}" StrokeThickness="0" Width="25" Height="25" Margin="5,0"/>
+						<Ellipse Fill="{StaticResource CoolDotBrush}" StrokeThickness="0" Width="25" Height="25" Margin="5,0"/>
 						<TextBlock TextWrapping="Wrap" Text="HEAT + COOL" Margin="10,0,0,0"/>
 					</StackPanel>
 				</toolkit:ListPickerItem>
