--- a/WPNest/WPNest/MainPage/ThermostatControl.xaml
+++ b/WPNest/WPNest/MainPage/ThermostatControl.xaml
@@ -1,17 +1,12 @@
-﻿<UserControl x:Class="WPNest.ThermostatControl"
+﻿<UserControl
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-	xmlns:WPNest="clr-namespace:WPNest" mc:Ignorable="d"
-    FontFamily="{StaticResource PhoneFontFamilyNormal}"
-    FontSize="{StaticResource PhoneFontSizeNormal}"
-    Foreground="{StaticResource PhoneForegroundBrush}"
+	xmlns:WPNest="clr-namespace:WPNest" xmlns:System="clr-namespace:System;assembly=mscorlib" x:Class="WPNest.ThermostatControl"
+    mc:Ignorable="d"
     d:DesignHeight="380" d:DesignWidth="380"
 	Loaded="OnLoaded" SizeChanged="OnSizeChanged" >
-	<d:DataContext>
-		<WPNest:NestSampleViewModel/>
-	</d:DataContext>
 	<UserControl.Resources>
 		<Style x:Key="UpButton" TargetType="Button">
 			<Setter Property="Background" Value="Transparent"/>
@@ -87,7 +82,34 @@
 				</Setter.Value>
 			</Setter>
 		</Style>
+		<ControlTemplate x:Key="EmptyButton" TargetType="Button">
+			<Grid Background="#01000000">
+				<VisualStateManager.VisualStateGroups>
+					<VisualStateGroup x:Name="CommonStates">
+						<VisualState x:Name="Normal"/>
+						<VisualState x:Name="Disabled"/>
+						<VisualState x:Name="MouseOver"/>
+					</VisualStateGroup>
+					<VisualStateGroup x:Name="FocusStates">
+						<VisualState x:Name="Focused"/>
+					</VisualStateGroup>
+				</VisualStateManager.VisualStateGroups>
+			</Grid>
+		</ControlTemplate>
 	</UserControl.Resources>
+    
+	<UserControl.FontFamily>
+		<StaticResource ResourceKey="PhoneFontFamilyNormal"/>
+	</UserControl.FontFamily>
+	<UserControl.FontSize>
+		<StaticResource ResourceKey="PhoneFontSizeNormal"/>
+	</UserControl.FontSize>
+	<UserControl.Foreground>
+		<StaticResource ResourceKey="PhoneForegroundBrush"/>
+	</UserControl.Foreground>
+	<d:DataContext>
+		<WPNest:NestSampleViewModel/>
+	</d:DataContext>
     
     <Grid x:Name="LayoutRoot">
     	<VisualStateManager.VisualStateGroups>
@@ -116,6 +138,37 @@
     				</Storyboard>
     			</VisualState>
     		</VisualStateGroup>
+    		<VisualStateGroup x:Name="Away_States">
+    			<VisualStateGroup.Transitions>
+    				<VisualTransition GeneratedDuration="0:0:0.2" To="NotAway">
+    					<VisualTransition.GeneratedEasingFunction>
+    						<QuadraticEase EasingMode="EaseInOut"/>
+    					</VisualTransition.GeneratedEasingFunction>
+    				</VisualTransition>
+    				<VisualTransition GeneratedDuration="0:0:0.2" To="Away">
+    					<VisualTransition.GeneratedEasingFunction>
+    						<QuadraticEase EasingMode="EaseInOut"/>
+    					</VisualTransition.GeneratedEasingFunction>
+    				</VisualTransition>
+    			</VisualStateGroup.Transitions>
+    			<VisualState x:Name="NotAway"/>
+    			<VisualState x:Name="Away">
+    				<Storyboard>
+    					<DoubleAnimation Duration="0" To="0" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="textBlock" d:IsOptimized="True"/>
+    					<DoubleAnimation Duration="0" To="0" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="upButton" d:IsOptimized="True"/>
+    					<DoubleAnimation Duration="0" To="0" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="downButton" d:IsOptimized="True"/>
+    					<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.IsHitTestVisible)" Storyboard.TargetName="awayButton">
+    						<DiscreteObjectKeyFrame KeyTime="0">
+    							<DiscreteObjectKeyFrame.Value>
+    								<System:Boolean>True</System:Boolean>
+    							</DiscreteObjectKeyFrame.Value>
+    						</DiscreteObjectKeyFrame>
+    					</ObjectAnimationUsingKeyFrames>
+    					<DoubleAnimation Duration="0" To="1" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="awayButton" d:IsOptimized="True"/>
+    					<DoubleAnimation Duration="0" To="1" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="awayTextBlock" d:IsOptimized="True"/>
+    				</Storyboard>
+    			</VisualState>
+    		</VisualStateGroup>
     	</VisualStateManager.VisualStateGroups>
     	<Grid HorizontalAlignment="Center" VerticalAlignment="Center" Width="380" Height="380" Margin="1,0,-1,0">
     		<Grid.RowDefinitions>
@@ -134,7 +187,8 @@
     		<Path x:Name="ticks" Data="M0,0" UseLayoutRounding="False" Grid.RowSpan="3" Stroke="White" HorizontalAlignment="Center" VerticalAlignment="Center" Width="380" Height="380"/>
     		<Path x:Name="mediumTicks" Data="M0,0" UseLayoutRounding="False" Grid.RowSpan="3" Stroke="White" HorizontalAlignment="Center" VerticalAlignment="Center" Width="380" Height="380" StrokeThickness="3"/>
     		<Path x:Name="heavyTicks" Data="M0,0" UseLayoutRounding="False" Grid.RowSpan="3" Stroke="White" HorizontalAlignment="Center" VerticalAlignment="Center" Width="380" Height="380" StrokeThickness="7"/>
-    		<TextBlock Text="{Binding TargetTemperature}" FontSize="133.333" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="Segoe WP Semibold" Grid.RowSpan="3" Margin="0,-10,0,0" Foreground="White"/>
+    		<TextBlock x:Name="awayTextBlock" HorizontalAlignment="Center" TextWrapping="Wrap" Text="AWAY" VerticalAlignment="Center" Grid.RowSpan="3" FontSize="96" FontFamily="Segoe WP Semibold" IsHitTestVisible="False" Opacity="0"/>
+    		<TextBlock x:Name="textBlock" Text="{Binding TargetTemperature}" FontSize="133.333" HorizontalAlignment="Center" VerticalAlignment="Center" FontFamily="Segoe WP Semibold" Grid.RowSpan="3" Margin="0,-10,0,0" Foreground="White"/>
     		<Canvas Grid.RowSpan="3">
 				<TextBlock x:Name="currentTemperature" HorizontalAlignment="Left" TextWrapping="NoWrap" TextAlignment="Center" 
 						   LayoutUpdated="OnCurrentTemperatureLayoutUpdated" Text="{Binding CurrentTemperature}" VerticalAlignment="Top" 
@@ -142,6 +196,7 @@
 			</Canvas>
     		<Button x:Name="upButton" Click="OnUpClick" IsEnabled="{Binding IsLoggedIn}" Grid.Row="0" BorderThickness="0" Padding="0" Style="{StaticResource UpButton}" Background="#01010101" Foreground="{x:Null}" BorderBrush="{x:Null}"/>
     		<Button x:Name="downButton" Click="OnDownClick" IsEnabled="{Binding IsLoggedIn}" BorderThickness="0" Padding="0" Grid.Row="2" Style="{StaticResource DownButton}" Background="#01010101" Foreground="{x:Null}" BorderBrush="{x:Null}"/>
+    		<Button x:Name="awayButton" Content="Button" Grid.RowSpan="3" Template="{StaticResource EmptyButton}" Opacity="0" IsHitTestVisible="False" Click="OnAwayButtonPressed"/>
     	</Grid>
 
     </Grid>
